Closes #750 - fix for media and text block uneven margins for the 768px break point.

--- a/modern-business/style.css
+++ b/modern-business/style.css
@@ -3609,6 +3609,10 @@ body.page .main-navigation {
   }
 }
 
+.entry .entry-content .wp-block-media-text .wp-block-media-text__content {
+  padding: 8%;
+}
+
 .entry .entry-content .wp-block-media-text.has-media-on-the-right.is-stacked-on-mobile .wp-block-media-text__content {
   grid-area: media-text-media;
 }
